<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="36dp">

    <TextView
        android:id="@+id/fate_metric_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/tic_tac_toe"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/xs_and_os_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fate_metric_textView"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_instructions"
        android:layout_below="@+id/xs_and_os_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>